# obsidian

./: .gitignore  Cargo.toml  README.md
experiment/: Cargo.toml
experiment/src/: lib.rs
src/: bar.rs  color.rs  config.rs  default_config.toml  main.rs  manager.rs  monitor.rs  panel.glade  panel.rs  separator.rs  status.rs  status_component.rs  util.rs
src/components/: battery.rs  clock.rs  load.rs  memory.rs  mod.rs  music.rs  plugin.rs  separator.rs  status.rs  workspace.rs  workspaces.rs
src/status/: battery.rs  clock.rs  load.rs  memory.rs  mod.rs  volume.rs
src/widgets/: mod.rs  monitor_bar.rs  status.rs  workspace.rs
