[package]
name = "obsidian"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]

[dependencies]
alsa        = "^0.1.8"
cairo-rs    = "^0.1.3"
config      = "^0.6.0"
futures     = "^0.1.14"
gdk         = "^0.5.3"
gdk-sys     = "^0.3.4"
glib        = "^0.1.3"
gtk         = { version = "^0.1.3", features = [ "v3_20" ] }
i3ipc       = "^0.4.2"
leak        = "^0.1"
mpd         = { git = "https://github.com/kstep/rust-mpd" }
pango       = "^0.1.3"
pangocairo  = "^0.1.0"
relm        = "^0.9.6"
relm-derive = "^0.9.2"
time        = "^0.1.37"
tokio-core  = "^0.1.8"
tokio-timer = "^0.1.1"

# gtk-sys    = { git = "https://github.com/gtk-rs/sys.git", features = [ "v3_20" ] }
# gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git" }
