[package]
name = "obsidian"
version = "0.2.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]

[dependencies]
cairo-rs     = "0.5.0"
config       = "0.9.0"
gdk          = "0.9.0"
gdk-sys      = "0.7.0"
glib         = "0.6.0"
gtk          = { version = "0.5.0", features = [ "v3_20" ] }
i3ipc        = "0.8.2"
itertools    = "0.7.8"
mpd          = { git = "https://github.com/kstep/rust-mpd" }
pango        = "0.5.0"
pangocairo   = "0.6.0"
relm         = "0.15.0"
relm-core    = "0.15.0"
relm-derive  = "0.15.0"
serde        = "1.0.78"
serde_derive = "1.0.78"
time         = "0.1.40"
